# wpoke Change Log
All notable changes to this project will be documented in this file.
This project adheres to [Semantic Versioning](http://semver.org/).

## [0.1.2 - 2019-10-19]

- Fixed entrypoint script not being included within PYTHONPATH

## [0.1.1 - 2019-10-17]

- Fixed subpackage imports during build

## [0.1.0 - 2019-10-17]

- Primer release. Mainly featuring theme metadata retrieval
