@@ -1,7 +1,7 @@
 [tox]
 skipsdist = true
 isolated_build = true
-envlist = py{37,38}, flake8, black
+envlist = py{37,38}, flake8, black, build, install
 
 [testenv]
 deps =
@@ -22,3 +22,9 @@ deps =
     black
 commands =
     black --check --verbose wpoke
+
+[testenv:build]
+commands = python setup.py sdist bdist_wheel
+
+[testenv:install]
+commands = python setup.py install
